<resources>
    <string name="app_name">Tasky</string>
    <string name="bAddTaskText">+</string>
    <string name="Add">Add</string>
    <string name="Task">Task</string>
    <string name="Priority">Priority</string>
    <string name="taskDescription">Description</string>
    <string name="Save">SAVE</string>
    <string name="enterTitle">Enter title</string>
    <string name="enterDescription">Enter description</string>
    <string-array name="priority">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>
