<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:id="@+id/tvTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/text_margin"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Task"/>
    <EditText
        android:id="@+id/etTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterTitle"
        android:textSize="@dimen/title_size"
        android:layout_below="@id/tvTaskName"
        android:textColorHint="@color/light_gray"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/item_bottom_margin"
        android:inputType="text|textMultiLine|textCapSentences"
        android:maxLength="@dimen/title_maxLength"
        android:gravity="left"
        android:maxLines="@dimen/title_maxLines"/>
    <TextView
        android:id="@+id/tvTaskPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/priority_margin"
        android:layout_marginRight="@dimen/right_sp_margin"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Priority"
        android:layout_below="@id/etTaskName"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_below="@id/etTaskName"
        android:layout_toRightOf="@id/tvTaskPriority"
        android:layout_marginBottom="@dimen/item_bottom_margin"/>
    <TextView
        android:id="@+id/tvTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/text_margin"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/taskDescription"
        android:layout_below="@id/spinner"/>
    <EditText
        android:id="@+id/etTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterDescription"
        android:textColorHint="@color/light_gray"
        android:textColor="@color/white"
        android:layout_below="@id/tvTaskDescription"
        android:layout_marginBottom="@dimen/item_bottom_margin"
        android:inputType="text|textMultiLine|textCapSentences"
        android:maxLength="@dimen/edit_maxLength"
        android:gravity="left"
        android:maxLines="@dimen/edit_maxLines"/>
    <Button
        android:id="@+id/bAdd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_gravity="center"
        android:text="@string/Add"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/text_size"
        android:layout_below="@id/etTaskDescription"/>
</RelativeLayout>
</ScrollView>
